--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>BaeYeongGi</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="canonical" href="https://baeyeonggi.github.io/react-portfolio/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="format-detection" content="telephone=no">
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="프론트엔드 개발자 배영기의 포트폴리오 입니다." />
+    <meta property="og:site_name" content="https://baeyeonggi.github.io/react-portfolio/" />
+    <meta property="og:title" content="BaeYeongGi" />
+    <meta property="og:description" content="프론트엔드 개발자 배영기의 포트폴리오 입니다." />
+    <meta property="og:url" content="https://baeyeonggi.github.io/react-portfolio/" />
+    <meta property="og:type" content="website" />
+    <meta property="fb:pages" content="http://tisepx.com/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BaeYeongGi</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
