--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
     <meta property="og:title" content="BaeYeongGi" />
     <meta property="og:description" content="프론트엔드 개발자 배영기의 포트폴리오 입니다." />
     <meta property="og:url" content="https://baeyeonggi.github.io/react-portfolio/" />
+    <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
-    <meta property="fb:pages" content="http://tisepx.com/" />
+    <meta property="fb:pages" content="https://baeyeonggi.github.io/react-portfolio/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
