add SEO IE=edge

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>BaeYeongGi</title>
     <meta charset="utf-8" />
-    <meta http-equiv="keywords" content="배영기,프론트엔드 개발자,웹프론트엔드">    
+    <meta http-equiv="keywords" content="배영기,프론트엔드 개발자,웹프론트엔드">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">        
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="canonical" href="https://baeyeonggi.github.io/react-portfolio/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
