add SEO keywords

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
   <head>
     <title>BaeYeongGi</title>
     <meta charset="utf-8" />
-    <meta http-equiv="keywords" content="배영기,프론트엔드 개발자,웹프론트엔드">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">        
+    <meta http-equiv="keywords" content="배영기,baeyeonggi,프론트엔드 개발자,Front-End Developer" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />        
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="canonical" href="https://baeyeonggi.github.io/react-portfolio/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="telephone=no"/>
     <meta name="description" content="프론트엔드 개발자 배영기의 포트폴리오 입니다." />
-    <meta name="Resource-type" content="Document">
-    <meta name="Author" content="배영기">
+    <meta name="Resource-type" content="Document"/>
+    <meta name="Author" content="배영기"/>
     <meta name="Product" content="Web Front-End Portfolio">
     <meta property="og:site_name" content="https://baeyeonggi.github.io/react-portfolio/" />
     <meta property="og:title" content="BaeYeongGi" />
@@ -27,7 +27,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
