--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     <meta property="og:url" content="https://baeyeonggi.github.io/react-portfolio/" />
     <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/link_thumbnail.jpg" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="400" />
     <meta property="fb:pages" content="https://baeyeonggi.github.io/react-portfolio/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
