add profile image

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="Author" content="배영기"/>
     <meta name="Product" content="Web Front-End Portfolio">
     <meta property="og:site_name" content="https://baeyeonggi.github.io/react-portfolio/" />
-    <meta property="og:title" content="BaeYeongGi" />
+    <meta property="og:title" content="Baeyeonggi's Front-end Portfolio" />
     <meta property="og:description" content="프론트앤드 개발자 배영기의 포트폴리오 입니다." />
     <meta property="og:url" content="https://baeyeonggi.github.io/react-portfolio/" />
     <meta property="og:locale" content="en" />
